# ATIVCAP5AplicacaoDMA

./: CMakeLists.txt  README.md  main.c
